syntax = "proto3";
package computesvc;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

// 生成类的包名
option java_package = "com.platon.rosettanet.admin.grpc";
//生成的数据访问类的类名，如果没有指定此值，则生成的类名为proto文件名的驼峰命名方法
option java_outer_classname = "ComputeProviderRpcMessage";

service ComputeProvider {
   rpc GetStatus(google.protobuf.Empty) returns (GetStatusReply) {
         option(google.api.http) = {
            get: "/compute/getStatus"
        };
  }
  rpc GetTaskDetails(GetTaskDetailsReq) returns (GetTaskDetailsReply) {
        option(google.api.http) = {
            post: "/compute/getTaskDetails"
            body: "*"
        };
  }

  rpc UploadShard(stream UploadShardReq) returns (UploadShardReply) {}
  rpc HandleTaskReadyGo(TaskReadyGoReq) returns (UploadShardReply) {
         option(google.api.http) = {
            post: "/compute/handleTaskReadyGo"
            body: "*"
        };
  }

}

message UploadShardReq {
  message Info {
    string task_id = 1;
    string data_id = 2;
  }
  oneof data {
    Info meta = 1;
    bytes content = 2;
  }
}

message UploadShardReply {
  bool ok = 1;
  string msg = 2;
}

message TaskReadyGoReq {
  string task_id = 1;
  string contract_id = 2;
  string data_id = 3;
  int32 node_id = 4;
  string env_id = 5;
  message Peer {
    string ip = 1;
    int32 port = 2;
    int32 party = 3;
    string name = 4;
  }
  repeated Peer peers = 6;
  map<string, string> user_cfg = 7;
}

message GetStatusReply {
  string cpu = 1;
  string mem = 2;
  string bandwidth = 3;
}

message GetTaskDetailsReq {
  repeated string task_ids = 1;
}

message GetTaskDetailsReply {
  message Detail {
    string task_id = 1;
    string task_name = 2;
    string contract_id = 3;
    int64 elapsed_time = 4;
    int64 remain_time = 5;
    string progress = 6;
    string phase = 7;
  }
  repeated Detail task_details = 1;
}
